objects/Quality_Case__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quality_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Parent</label>
        <referenceTo>Cancellation_Request__c</referenceTo>
        <relationshipLabel>Quality Case</relationshipLabel>
        <relationshipName>Quality_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Ag_Bus_Days__c</fullName>
        <formula>CASE(MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 0 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 1 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 2 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 3 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 4 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 5 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 6 , 
CASE( MOD( Today() - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 999) 
+ (FLOOR(( Today() - DateValue(CreatedDate) )/7)*5-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Ag (Bus Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed_By__c</fullName>
        <label>Case Closed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date_Time__c</fullName>
        <label>Case Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account_Name__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID_del__c</fullName>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Processed_QA__c</fullName>
        <label>Date Processed QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>if(
 ISPICKVAL( Status__c , "Closed") ,
true,
false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes_Recorded__c</fullName>
        <label>Minutes Recorded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;5</fullName>
                </value>
                <value>
                    <fullName>&lt;15</fullName>
                </value>
                <value>
                    <fullName>&lt;30</fullName>
                </value>
                <value>
                    <fullName>&lt;60</fullName>
                </value>
                <value>
                    <fullName>&lt;90</fullName>
                </value>
                <value>
                    <fullName>&gt;90</fullName>
                </value>
                <value>
                    <fullName>&lt;150</fullName>
                </value>
                <value>
                    <fullName>&gt;150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offense_Details__c</fullName>
        <label>Offense Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>QA_Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$100 Fine</fullName>
                </value>
                <value>
                    <fullName>Misc: AA Breach</fullName>
                </value>
                <value>
                    <fullName>Active Client Owned Domain</fullName>
                </value>
                <value>
                    <fullName>Assumptive Prepay</fullName>
                </value>
                <value>
                    <fullName>Billing: Change Mind POS</fullName>
                </value>
                <value>
                    <fullName>Billing: Contract Length</fullName>
                </value>
                <value>
                    <fullName>Calls/Jobs TORCHx Only</fullName>
                </value>
                <value>
                    <fullName>Current SEO – No Impact</fullName>
                </value>
                <value>
                    <fullName>Disciplinary Offense</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Organic Placement</fullName>
                </value>
                <value>
                    <fullName>Incorrect Lead Ranges</fullName>
                </value>
                <value>
                    <fullName>Incorrect Pricing</fullName>
                </value>
                <value>
                    <fullName>Billing: Invoice/Call/Automatic Billing</fullName>
                </value>
                <value>
                    <fullName>Launch/Pause</fullName>
                </value>
                <value>
                    <fullName>Lead Conversion Rate</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Conservative</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Lead Range – Prospects vs. Clients</fullName>
                </value>
                <value>
                    <fullName>Misc: Non English</fullName>
                </value>
                <value>
                    <fullName>Non PSG Focus/Results</fullName>
                </value>
                <value>
                    <fullName>Not Advertised for Segment</fullName>
                </value>
                <value>
                    <fullName>Organic Results</fullName>
                </value>
                <value>
                    <fullName>Billing: Payment Dates</fullName>
                </value>
                <value>
                    <fullName>Misc: Product Misrepresentation</fullName>
                </value>
                <value>
                    <fullName>Billing: Refund Discussion</fullName>
                </value>
                <value>
                    <fullName>Replicating Website</fullName>
                </value>
                <value>
                    <fullName>ROE Breach</fullName>
                </value>
                <value>
                    <fullName>SEO on Client's Website</fullName>
                </value>
                <value>
                    <fullName>Specific Placement</fullName>
                </value>
                <value>
                    <fullName>Timeframe - Calls within 24-48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Case_ID__c</fullName>
        <label>Original Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Case_Number__c</fullName>
        <label>Original Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Quality_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Action_Taken__c</fullName>
        <label>QA Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$100 Fine</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Full Commission Loss</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Type__c</fullName>
        <label>QA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QA Request</fullName>
                </value>
                <value>
                    <fullName>Developmental Monitor</fullName>
                </value>
                <value>
                    <fullName>Closing Script QA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_QA__c</fullName>
        <label>Reason for QA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$100 Fine - Professionalism</fullName>
                </value>
                <value>
                    <fullName>$100 Fine - Referencing National</fullName>
                </value>
                <value>
                    <fullName>AA Breach</fullName>
                </value>
                <value>
                    <fullName>Assumptive Prepay</fullName>
                </value>
                <value>
                    <fullName>BRO - Incorrect Billing</fullName>
                </value>
                <value>
                    <fullName>Cancellation Policy</fullName>
                </value>
                <value>
                    <fullName>Change Mind POS</fullName>
                </value>
                <value>
                    <fullName>Competing Ads Campaign</fullName>
                </value>
                <value>
                    <fullName>Contract Length</fullName>
                </value>
                <value>
                    <fullName>CS Touch Plan</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - Email Signature</fullName>
                </value>
                <value>
                    <fullName>Disciplinary Offense</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - PCI</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - Pitch Against Company</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - Professionalism</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - Save Attempt</fullName>
                </value>
                <value>
                    <fullName>Disciplinary - Unauthorized Charge</fullName>
                </value>
                <value>
                    <fullName>eContract</fullName>
                </value>
                <value>
                    <fullName>Exclusivity</fullName>
                </value>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>Found Outside of 20 Miles</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Organic Placement</fullName>
                </value>
                <value>
                    <fullName>Half Chargeback</fullName>
                </value>
                <value>
                    <fullName>Highest Level Offense</fullName>
                </value>
                <value>
                    <fullName>Invoice/Call/Automatic Billing</fullName>
                </value>
                <value>
                    <fullName>Launch/Pause</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Averaging</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Conservative</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_of_QA__c</fullName>
        <label>Result of QA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZTO</fullName>
                </value>
                <value>
                    <fullName>No ZTO Found</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
                <value>
                    <fullName>$100 Fine</fullName>
                </value>
                <value>
                    <fullName>Error Free</fullName>
                </value>
                <value>
                    <fullName>Error Found</fullName>
                </value>
                <value>
                    <fullName>Error Free - Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR1_Date_Processed_QA__c</fullName>
        <label>SR1 Date Processed QA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SR1_E_mail_Address__c</fullName>
        <label>SR1 E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SR1_Manager__c</fullName>
        <label>SR1 Manager</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR1_Name_text__c</fullName>
        <label>SR1 Name (text)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR1_Offense_Details__c</fullName>
        <label>SR1 Offense Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>QA_Product_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$100 Fine</fullName>
                </value>
                <value>
                    <fullName>Misc: AA Breach</fullName>
                </value>
                <value>
                    <fullName>Active Client Owned Domain</fullName>
                </value>
                <value>
                    <fullName>Assumptive Prepay</fullName>
                </value>
                <value>
                    <fullName>Billing: Change Mind POS</fullName>
                </value>
                <value>
                    <fullName>Billing: Contract Length</fullName>
                </value>
                <value>
                    <fullName>Calls/Jobs TORCHx Only</fullName>
                </value>
                <value>
                    <fullName>Current SEO – No Impact</fullName>
                </value>
                <value>
                    <fullName>Disciplinary Offense</fullName>
                </value>
                <value>
                    <fullName>Guaranteed Organic Placement</fullName>
                </value>
                <value>
                    <fullName>Incorrect Lead Ranges</fullName>
                </value>
                <value>
                    <fullName>Incorrect Pricing</fullName>
                </value>
                <value>
                    <fullName>Billing: Invoice/Call/Automatic Billing</fullName>
                </value>
                <value>
                    <fullName>Launch/Pause</fullName>
                </value>
                <value>
                    <fullName>Lead Conversion Rate</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Conservative</fullName>
                </value>
                <value>
                    <fullName>Lead Range - Guaranteed</fullName>
                </value>
                <value>
                    <fullName>Lead Range – Prospects vs. Clients</fullName>
                </value>
                <value>
                    <fullName>Misc: Non English</fullName>
                </value>
                <value>
                    <fullName>Non PSG Focus/Results</fullName>
                </value>
                <value>
                    <fullName>Not Advertised for Segment</fullName>
                </value>
                <value>
                    <fullName>Organic Results</fullName>
                </value>
                <value>
                    <fullName>Billing: Payment Dates</fullName>
                </value>
                <value>
                    <fullName>Misc: Product Misrepresentation</fullName>
                </value>
                <value>
                    <fullName>Billing: Refund Discussion</fullName>
                </value>
                <value>
                    <fullName>Replicating Website</fullName>
                </value>
                <value>
                    <fullName>ROE Breach</fullName>
                </value>
                <value>
                    <fullName>SEO on Client's Website</fullName>
                </value>
                <value>
                    <fullName>Specific Placement</fullName>
                </value>
                <value>
                    <fullName>Timeframe - Calls within 24-48</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR1_QA_Action_Taken__c</fullName>
        <label>SR1 QA Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$100 Fine</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Full Commission Loss</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR1_Sales_Office__c</fullName>
        <label>SR1 Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Scottsdale</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_text__c</fullName>
        <label>Sales Person (text)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_E_mail_Address__c</fullName>
        <label>Sales Rep E-mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Delete Case</fullName>
                    <isActive>false</isActive>
                    <label>Delete Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Words_Transcribed__c</fullName>
        <label>Words Transcribed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;50</fullName>
                </value>
                <value>
                    <fullName>&lt;250</fullName>
                </value>
                <value>
                    <fullName>&lt;500</fullName>
                </value>
                <value>
                    <fullName>&lt;1000</fullName>
                </value>
                <value>
                    <fullName>&lt;1500</fullName>
                </value>
                <value>
                    <fullName>&lt;2000</fullName>
                </value>
                <value>
                    <fullName>&gt;2000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>For Closing Script - Auto Launch</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>No Recording</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Date__c</fullName>
        <description>Date of Sale</description>
        <label>Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Scottsdale</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Timestamp__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>CS Timestamp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Found_Under__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Call Found Under</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Demo_Recorded__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Demo Recorded?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fail_Details__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Fail Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Quality_Offense__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>Potential Quality Offense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>For Closing Script - Auto Launch Case</description>
        <label>Product Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QO_Timestamp__c</fullName>
        <description>For Closing Script - Auto Close Case</description>
        <label>QO Timestamp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <description>Sales Director Name associated to record</description>
        <label>Sales Director</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <description>For Closing Script - Auto Launch Case</description>
        <label>Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>For Closing Script - Auto Launch Case</description>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Product_Type__c</fullName>
        <formula>Account_Name__r.Product_Type_Transactional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Fail_Details__c</fullName>
        <label>CS Fail Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Address left blank</fullName>
                </value>
                <value>
                    <fullName>Address not verified</fullName>
                </value>
                <value>
                    <fullName>Address visibility entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Address visibility left blank</fullName>
                </value>
                <value>
                    <fullName>Address visibility was not verified</fullName>
                </value>
                <value>
                    <fullName>Business hours entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Business hours left blank</fullName>
                </value>
                <value>
                    <fullName>Business hours not verified</fullName>
                </value>
                <value>
                    <fullName>Business name entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Business name left blank</fullName>
                </value>
                <value>
                    <fullName>Business name not verified</fullName>
                </value>
                <value>
                    <fullName>Business years open entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Business years open not verified</fullName>
                </value>
                <value>
                    <fullName>Closing script not recorded</fullName>
                </value>
                <value>
                    <fullName>Commitment length not verified</fullName>
                </value>
                <value>
                    <fullName>Contact phone number entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Contact phone number not verified</fullName>
                </value>
                <value>
                    <fullName>CSC call time discrepancy</fullName>
                </value>
                <value>
                    <fullName>CSC scheduled outside of the 3 to 5 business day time window</fullName>
                </value>
                <value>
                    <fullName>Questionnaire not emailed to Quality on the day of the sale</fullName>
                </value>
                <value>
                    <fullName>Current verison of Closing Script not read</fullName>
                </value>
                <value>
                    <fullName>Email address not verified</fullName>
                </value>
                <value>
                    <fullName>Email entered incorrectly or not spelled out</fullName>
                </value>
                <value>
                    <fullName>Email left blank</fullName>
                </value>
                <value>
                    <fullName>Emergency call availability entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Emergency call availability not verified</fullName>
                </value>
                <value>
                    <fullName>Launch Timeline not verified</fullName>
                </value>
                <value>
                    <fullName>Lead phone number entered incorrectly</fullName>
                </value>
                <value>
                    <fullName>Lead phone number left blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>